--- a/css/main.css
+++ b/css/main.css
@@ -7,18 +7,22 @@
   font-size: 13px;
 }
 
+*{
+  font-family: "Google Sans Flex";
+
+}
+
 header {
   width: 100%;
   height: 60px;
 }
 
 header nav {
-    display: flex;
-    justify-content: flex-end ;
-
+  display: flex;
+  justify-content: flex-end;
 }
 header nav .nav-right-section {
-    display: flex;
+  display: flex;
   width: 250px;
   height: auto;
   list-style: none;
@@ -44,16 +48,147 @@ a {
 }
 
 nav .nav-right-section .menu-icon {
-    background-image: url('https://static.thenounproject.com/png/756729-200.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    width: 25px;
-    height: 25px;
-
+  background-image: url("https://static.thenounproject.com/png/756729-200.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 25px;
+  height: 25px;
 }
 
 nav .nav-right-section img {
-    border-radius: 50%;
-    margin-left: 10px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+main {
+  margin-top: 150px;
+  text-align: center;
+}
+
+main .main-logo {
+  width: 530px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+}
+
+main .main-logo img {
+  width: 300px;
+}
+
+main .main-input {
+  width: 530px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+}
+
+main .main-input-container {
+  width: 525px;
+  border-radius: 100px;
+  border: 1px solid #dadce0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main .main-input input {
+  width: 450px;
+  height: 40px;
+  border: none;
+  outline: none;
+}
+
+main .main-input-container:hover {
+  box-shadow: 0px 1px 6px 0 #20212447;
+  border-color: #dfe1e500;
+}
+
+main .main-input .search-icon {
+  background-image: url('https://www.freeiconspng.com/thumbs/search-icon-png/search-icon-png-2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 18px;
+  height: 18px;
+}
+
+main .main-input .micro-icon {
+  background-image: url('https://icones.pro/wp-content/uploads/2021/12/icone-de-microphone-gris.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+
+main .main-buttons {
+    width: 530px;
+    margin: 0 auto;
+}
+
+main .main-buttons div {
+    display: inline-block;
+    
+}
+
+main .main-buttons button {
+    height: 2.25rem;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 15px;
+}
+
+main .main-buttons button:hover {
+  cursor: pointer;
+  background-color: #f8f9fa;
+  border: 1px solid #dadce0;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+  color: #202124;
+
+
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  font-size: 13px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+  left: 0;
+}
+
+footer ul{
+  list-style-type: none;
+  margin: 10px;
+  padding-left: 0;
+  display: flex;
+
+}
+
+footer ul li a {
+  margin: 10px;
+  color: #5f6368 ;
+}
+
+footer li {
+  padding: 10px;
+}
+
+footer .footer-left {
+  justify-self: left;
+  
+}
+
+footer .footer-right {
+  justify-self: right;
 }
